--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
   "name": "bliss-keyboard",
-  "version": "0.1.0",
-  "private": true,
+  "description": "A react keyboard designed to facilitate the use of bliss symbols in applications.",
+  "version": "1.0.0",
+  "author": "Matthew Davis <matthew@matthewdavis.uk> (https://www.matthewdavis.uk/)",
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/matthew-davis/bliss-keyboard.git"
+  },
   "dependencies": {
     "@types/node": "^18.7.18",
     "@types/react": "^18.0.18",
