--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "url": "https://github.com/matthew-davis/bliss-keyboard.git"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@types/node": "^18.7.18",
     "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
