--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "fuzzysort": "^2.0.2",
+    "react": "^18.2.0",
+    "typescript": "^4.8.2"
+  },
+  "devDependencies": {
     "@types/node": "^18.7.18",
     "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
-    "fuzzysort": "^2.0.2",
-    "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
     "typescript": "^4.8.2"
