--- a/package.json
+++ b/package.json
@@ -13,14 +13,18 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "fuzzysort": "^2.0.2",
     "react": "^18.2.0",
-    "typescript": "^4.8.2"
+    "react-dom": "^18.2.0",
+    "react-scripts": "^5.0.1"
   },
   "devDependencies": {
+    "@testing-library/dom": "^8.19.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/node": "^18.7.18",
     "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
-    "react-dom": "^18.2.0",
-    "react-scripts": "^5.0.1",
+    "jest": "^29.3.1",
     "typescript": "^4.8.2"
   },
   "scripts": {
